# taxwazobia-bot

./: .gitignore  Procfile  Procfile.txt  app.py  check_metrics.py  create_table.py  index_knowledge_base.py  inspect_columns.py  pyproject.toml  requirements.txt  retriever.py  secret.env.txt  set_webhook.py  taxwazobia_app.py  test_env.py  test_postgres.py
knowledge_base/: sources.json
vector_index/: index.faiss  sources.json  sources.pkl
