[project]
name = "taxwazobia"
version = "0.1.0"
description = "TaxWazobia - Nigerian Tax Assistant Chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.1.1"
openai = "0.28.0"
python-telegram-bot = "13.15"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
